# Kondo_Heisenberg_Model

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Kondo_Heisenberg.cbp  Makefile  README.md  SSF.py  asd.txt  cmake_install.cmake  compile_bem  compile_bem_maciek  compile_local  experiment1.h  input  interface.h  jacek  kondo_heisenberg.h  main.cpp  model.h  operators.h  parser.h  run_stress_test  run_stress_tests  run_timeEv  run_timeEvs  scr1  scr1b  scr2  scr2b  scr3  scr4
